--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TauPsi</string>
+    <string name="app_name">AsuTauPsi</string>
     <string name="test_string">Test</string>
     <string name="brother_name">%1$s</string>
     <string name="about_string">About:</string>
@@ -9,6 +9,8 @@
     <string name="rush_header">What is Rush?</string>
     <string name="requirements_header">Requirements</string>
     <string name="events_header">Events</string>
+    <string name="about_us_header">Tau Psi Omega</string>
+    <string name="about_tau_psi">Tau Psi Omega Fraternity Incorporated was founded September 14, 1996 by 12 founding fathers. </string>
     <string name="rush_description">Rush is a series of events hosted by the fraternity that allow prospective and current members to get to know each other. At the end of rush, the brothers will offer a bid to the men best
         fitted for membership. A bid is an invitation to start the pledge process.
     </string>
